Config with Husky pre-commit. And Redux

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build:dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
     "build:prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "start": "cross-env NODE_ENV=development webpack serve",
-    "lint": "npx eslint src/**/*.js",
+    "lint": "npx eslint --ext .js \"src/**/*.{js,jsx,ts,tsx}\"",
     "prettier": "npx prettier --write .",
     "prepare": "husky install"
   },
